src/antlr/Grammaire1Parser.java
// Generated from Grammaire1.g4 by ANTLR 4.13.0

    package antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class Grammaire1Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, VAR_GLOBAL=15, TYPE=16, 
		IFSTATEMENT=17, ELSEFSTATEMENT=18, FORSTATMENT=19, OPRATEUR_LOGIQUE=20, 
		OPRATEUR_ARETHMETIC1=21, OPRATEUR_ARETHMETIC2=22, OPRATEUR_COMPARAISON=23, 
		INT=24, FLOAT=25, CHAR=26, MOTS=27, ID=28, PVG=29, WS=30;
	public static final int
		RULE_start = 0, RULE_var_global = 1, RULE_var_expression = 2, RULE_id_variable = 3, 
		RULE_tableau = 4, RULE_declaration = 5, RULE_declaration_expression = 6, 
		RULE_const = 7, RULE_instruction = 8, RULE_instruction_expression = 9, 
		RULE_affectation = 10, RULE_expr = 11, RULE_if = 12, RULE_condition_simple = 13, 
		RULE_condition = 14, RULE_boucle = 15, RULE_fonction = 16, RULE_write = 17, 
		RULE_read = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "var_global", "var_expression", "id_variable", "tableau", "declaration", 
			"declaration_expression", "const", "instruction", "instruction_expression", 
			"affectation", "expr", "if", "condition_simple", "condition", "boucle", 
			"fonction", "write", "read"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "','", "'['", "']'", "'DECLARATION'", "'CONST'", 
			"'='", "'INSTRACTION'", "'('", "')'", "':'", "'write('", "'read('", "'VAR_GLOBAL'", 
			null, "'IF'", "'ELSE'", "'FOR'", null, null, null, null, null, null, 
			null, null, null, "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "VAR_GLOBAL", "TYPE", "IFSTATEMENT", "ELSEFSTATEMENT", 
			"FORSTATMENT", "OPRATEUR_LOGIQUE", "OPRATEUR_ARETHMETIC1", "OPRATEUR_ARETHMETIC2", 
			"OPRATEUR_COMPARAISON", "INT", "FLOAT", "CHAR", "MOTS", "ID", "PVG", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammaire1.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Grammaire1Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public Var_globalContext var_global() {
			return getRuleContext(Var_globalContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(Grammaire1Parser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			var_global();
			setState(39);
			declaration();
			setState(40);
			instruction();
			setState(41);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_globalContext extends ParserRuleContext {
		public TerminalNode VAR_GLOBAL() { return getToken(Grammaire1Parser.VAR_GLOBAL, 0); }
		public List<Var_expressionContext> var_expression() {
			return getRuleContexts(Var_expressionContext.class);
		}
		public Var_expressionContext var_expression(int i) {
			return getRuleContext(Var_expressionContext.class,i);
		}
		public Var_globalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_global; }
	}

	public final Var_globalContext var_global() throws RecognitionException {
		Var_globalContext _localctx = new Var_globalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_var_global);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			match(VAR_GLOBAL);
			setState(44);
			match(T__0);
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE) {
				{
				{
				setState(45);
				var_expression();
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(51);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_expressionContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(Grammaire1Parser.TYPE, 0); }
		public List<Id_variableContext> id_variable() {
			return getRuleContexts(Id_variableContext.class);
		}
		public Id_variableContext id_variable(int i) {
			return getRuleContext(Id_variableContext.class,i);
		}
		public TerminalNode PVG() { return getToken(Grammaire1Parser.PVG, 0); }
		public Var_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_expression; }
	}

	public final Var_expressionContext var_expression() throws RecognitionException {
		Var_expressionContext _localctx = new Var_expressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_var_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(TYPE);
			setState(54);
			id_variable();
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(55);
				match(T__2);
				setState(56);
				id_variable();
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(62);
			match(PVG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Id_variableContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(Grammaire1Parser.ID, 0); }
		public TableauContext tableau() {
			return getRuleContext(TableauContext.class,0);
		}
		public Id_variableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id_variable; }
	}

	public final Id_variableContext id_variable() throws RecognitionException {
		Id_variableContext _localctx = new Id_variableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_id_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(ID);
			setState(66);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(65);
				tableau();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TableauContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(Grammaire1Parser.INT, 0); }
		public TableauContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tableau; }
	}

	public final TableauContext tableau() throws RecognitionException {
		TableauContext _localctx = new TableauContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tableau);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(T__3);
			setState(69);
			match(INT);
			setState(70);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public List<Declaration_expressionContext> declaration_expression() {
			return getRuleContexts(Declaration_expressionContext.class);
		}
		public Declaration_expressionContext declaration_expression(int i) {
			return getRuleContext(Declaration_expressionContext.class,i);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(T__5);
			setState(73);
			match(T__0);
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6 || _la==TYPE) {
				{
				{
				setState(74);
				declaration_expression();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declaration_expressionContext extends ParserRuleContext {
		public ConstContext const_() {
			return getRuleContext(ConstContext.class,0);
		}
		public Var_expressionContext var_expression() {
			return getRuleContext(Var_expressionContext.class,0);
		}
		public Declaration_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration_expression; }
	}

	public final Declaration_expressionContext declaration_expression() throws RecognitionException {
		Declaration_expressionContext _localctx = new Declaration_expressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaration_expression);
		try {
			setState(84);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				const_();
				}
				break;
			case TYPE:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				var_expression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstContext extends ParserRuleContext {
		public TerminalNode TYPE() { return getToken(Grammaire1Parser.TYPE, 0); }
		public TerminalNode ID() { return getToken(Grammaire1Parser.ID, 0); }
		public TerminalNode PVG() { return getToken(Grammaire1Parser.PVG, 0); }
		public TerminalNode INT() { return getToken(Grammaire1Parser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(Grammaire1Parser.FLOAT, 0); }
		public TerminalNode MOTS() { return getToken(Grammaire1Parser.MOTS, 0); }
		public ConstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_const; }
	}

	public final ConstContext const_() throws RecognitionException {
		ConstContext _localctx = new ConstContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_const);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(T__6);
			setState(87);
			match(TYPE);
			setState(88);
			match(ID);
			setState(89);
			match(T__7);
			setState(90);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 184549376L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(91);
			match(PVG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstructionContext extends ParserRuleContext {
		public List<Instruction_expressionContext> instruction_expression() {
			return getRuleContexts(Instruction_expressionContext.class);
		}
		public Instruction_expressionContext instruction_expression(int i) {
			return getRuleContext(Instruction_expressionContext.class,i);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_instruction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(T__8);
			setState(94);
			match(T__0);
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 269115392L) != 0)) {
				{
				{
				setState(95);
				instruction_expression();
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Instruction_expressionContext extends ParserRuleContext {
		public AffectationContext affectation() {
			return getRuleContext(AffectationContext.class,0);
		}
		public IfContext if_() {
			return getRuleContext(IfContext.class,0);
		}
		public BoucleContext boucle() {
			return getRuleContext(BoucleContext.class,0);
		}
		public FonctionContext fonction() {
			return getRuleContext(FonctionContext.class,0);
		}
		public Instruction_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction_expression; }
	}

	public final Instruction_expressionContext instruction_expression() throws RecognitionException {
		Instruction_expressionContext _localctx = new Instruction_expressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_instruction_expression);
		try {
			setState(107);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				affectation();
				}
				break;
			case IFSTATEMENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				if_();
				}
				break;
			case FORSTATMENT:
				enterOuterAlt(_localctx, 3);
				{
				setState(105);
				boucle();
				}
				break;
			case T__12:
			case T__13:
				enterOuterAlt(_localctx, 4);
				{
				setState(106);
				fonction();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AffectationContext extends ParserRuleContext {
		public Id_variableContext id_variable() {
			return getRuleContext(Id_variableContext.class,0);
		}
		public TerminalNode PVG() { return getToken(Grammaire1Parser.PVG, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode CHAR() { return getToken(Grammaire1Parser.CHAR, 0); }
		public AffectationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_affectation; }
	}

	public final AffectationContext affectation() throws RecognitionException {
		AffectationContext _localctx = new AffectationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_affectation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			id_variable();
			setState(110);
			match(T__7);
			setState(113);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
			case INT:
			case FLOAT:
			case ID:
				{
				setState(111);
				expr(0);
				}
				break;
			case CHAR:
				{
				setState(112);
				match(CHAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(115);
			match(PVG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public Id_variableContext id_variable() {
			return getRuleContext(Id_variableContext.class,0);
		}
		public TerminalNode INT() { return getToken(Grammaire1Parser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(Grammaire1Parser.FLOAT, 0); }
		public TerminalNode OPRATEUR_ARETHMETIC1() { return getToken(Grammaire1Parser.OPRATEUR_ARETHMETIC1, 0); }
		public TerminalNode OPRATEUR_ARETHMETIC2() { return getToken(Grammaire1Parser.OPRATEUR_ARETHMETIC2, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 22;
		enterRecursionRule(_localctx, 22, RULE_expr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
				{
				setState(118);
				match(T__9);
				setState(119);
				expr(0);
				setState(120);
				match(T__10);
				}
				break;
			case ID:
				{
				setState(122);
				id_variable();
				}
				break;
			case INT:
				{
				setState(123);
				match(INT);
				}
				break;
			case FLOAT:
				{
				setState(124);
				match(FLOAT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(135);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(133);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(127);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(128);
						match(OPRATEUR_ARETHMETIC1);
						setState(129);
						expr(6);
						}
						break;
					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(130);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(131);
						match(OPRATEUR_ARETHMETIC2);
						setState(132);
						expr(5);
						}
						break;
					}
					} 
				}
				setState(137);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfContext extends ParserRuleContext {
		public TerminalNode IFSTATEMENT() { return getToken(Grammaire1Parser.IFSTATEMENT, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public List<Instruction_expressionContext> instruction_expression() {
			return getRuleContexts(Instruction_expressionContext.class);
		}
		public Instruction_expressionContext instruction_expression(int i) {
			return getRuleContext(Instruction_expressionContext.class,i);
		}
		public List<TerminalNode> ELSEFSTATEMENT() { return getTokens(Grammaire1Parser.ELSEFSTATEMENT); }
		public TerminalNode ELSEFSTATEMENT(int i) {
			return getToken(Grammaire1Parser.ELSEFSTATEMENT, i);
		}
		public IfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if; }
	}

	public final IfContext if_() throws RecognitionException {
		IfContext _localctx = new IfContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_if);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(IFSTATEMENT);
			setState(139);
			match(T__9);
			setState(140);
			condition();
			setState(141);
			match(T__10);
			setState(142);
			match(T__0);
			setState(143);
			instruction_expression();
			setState(144);
			match(T__1);
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ELSEFSTATEMENT) {
				{
				{
				setState(145);
				match(ELSEFSTATEMENT);
				setState(146);
				match(T__0);
				setState(147);
				instruction_expression();
				setState(148);
				match(T__1);
				}
				}
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Condition_simpleContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode OPRATEUR_COMPARAISON() { return getToken(Grammaire1Parser.OPRATEUR_COMPARAISON, 0); }
		public Condition_simpleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition_simple; }
	}

	public final Condition_simpleContext condition_simple() throws RecognitionException {
		Condition_simpleContext _localctx = new Condition_simpleContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_condition_simple);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			expr(0);
			setState(156);
			match(OPRATEUR_COMPARAISON);
			setState(157);
			expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionContext extends ParserRuleContext {
		public List<Condition_simpleContext> condition_simple() {
			return getRuleContexts(Condition_simpleContext.class);
		}
		public Condition_simpleContext condition_simple(int i) {
			return getRuleContext(Condition_simpleContext.class,i);
		}
		public TerminalNode OPRATEUR_LOGIQUE() { return getToken(Grammaire1Parser.OPRATEUR_LOGIQUE, 0); }
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_condition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			condition_simple();
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPRATEUR_LOGIQUE) {
				{
				setState(160);
				match(OPRATEUR_LOGIQUE);
				setState(161);
				condition_simple();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BoucleContext extends ParserRuleContext {
		public TerminalNode FORSTATMENT() { return getToken(Grammaire1Parser.FORSTATMENT, 0); }
		public Id_variableContext id_variable() {
			return getRuleContext(Id_variableContext.class,0);
		}
		public List<TerminalNode> INT() { return getTokens(Grammaire1Parser.INT); }
		public TerminalNode INT(int i) {
			return getToken(Grammaire1Parser.INT, i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Instruction_expressionContext instruction_expression() {
			return getRuleContext(Instruction_expressionContext.class,0);
		}
		public BoucleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boucle; }
	}

	public final BoucleContext boucle() throws RecognitionException {
		BoucleContext _localctx = new BoucleContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_boucle);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(FORSTATMENT);
			setState(165);
			match(T__9);
			setState(166);
			id_variable();
			setState(167);
			match(T__7);
			setState(168);
			match(INT);
			setState(169);
			match(T__11);
			setState(170);
			match(INT);
			setState(171);
			match(T__11);
			setState(172);
			expr(0);
			setState(173);
			match(T__10);
			setState(174);
			match(T__0);
			setState(175);
			instruction_expression();
			setState(176);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FonctionContext extends ParserRuleContext {
		public WriteContext write() {
			return getRuleContext(WriteContext.class,0);
		}
		public ReadContext read() {
			return getRuleContext(ReadContext.class,0);
		}
		public FonctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fonction; }
	}

	public final FonctionContext fonction() throws RecognitionException {
		FonctionContext _localctx = new FonctionContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_fonction);
		try {
			setState(180);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__12:
				enterOuterAlt(_localctx, 1);
				{
				setState(178);
				write();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 2);
				{
				setState(179);
				read();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
